add blocks from hometask 13

--- a/index.html
+++ b/index.html
@@ -48,5 +48,37 @@
             </div>
         </div>
     </section>
+    <section class="logo-sect">
+        <div class="container">
+            <div class="logo-block">
+                <img src="img/logoipsum1.png" alt="">
+                <img src="img/logoipsum2.png" alt="">
+                <img src="img/logoipsum3.png" alt="">
+                <img src="img/logoipsum4.png" alt="">
+            </div>
+            <div class="logo-sect-row">               
+                <div class="col-1">
+                    <div class="flex-block-img">
+                        <img src="img/swpool.jpg" alt="">
+                        <img src="img/building.jpg" alt="">
+                    </div>
+                    
+                </div>
+                <div class="col-2">
+                    <div  class="col-2-text-block">
+                        <h2 class="heading">We provide best space for you!</h2>
+                        <p class="text">Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex ea quid est et via procedat oratio quaerimus.</p>
+                        <p class="text">quid aut ad id omnia referri oporteat, ipsum autem nusquam hoc epicurus in ea commodi consequatur?</p>
+                    </div>
+                    <button class="btn">Learn more</button>
+                </div>
+                <div class="small-block">
+                    <img src="img/building_logo.png" alt="">
+                    <p class="heading">Twelve West Lake</p>
+                    <p class="text">Space for up to 150 people</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
