--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +71,7 @@
                         <p class="text">Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex ea quid est et via procedat oratio quaerimus.</p>
                         <p class="text">quid aut ad id omnia referri oporteat, ipsum autem nusquam hoc epicurus in ea commodi consequatur?</p>
                     </div>
-                    <button class="btn">Learn more</button>
+                    <a href="" class="btn">Learn more</a>
                 </div>
                 <div class="small-block">
                     <img src="img/building_logo.png" alt="">
@@ -80,5 +81,79 @@
             </div>
         </div>
     </section>
+    <section class="using-product-sect container">
+        <div class="col">
+            <h2 class="heading">Start using our product</h2>
+            <p class="text">Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p>
+            <a href="" class="btn">Contact Us</a>
+            <a href="" class="btn play"><img src="img/play.svg">Watch now</a>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer-row">
+                <div class="col-1">
+                    <div class="col-1-inner">
+                        <a href="#"><img src="img/logo.svg" alt="Лого"></a>
+                        <p>Quae fuerit causa, nollem me ab illo inventore veritatis et.</p>
+                        <div class="social-links">
+                            <a href=""><i class="fab fa-facebook-square"></i></a>
+                            <a href=""><i class="fab fa-twitter"></i></a>
+                            <a href=""><i class="fab fa-youtube-square"></i></a>
+                            <a href=""><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4 class="footer-heading">Privacy</h4>
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="">Si sine causa</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Quae fuerit causa</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Certe, inquam</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Torquatos nostros? </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4 class="footer-heading">Legal</h4>
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="">Ut placet, inquam</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Certe, inquam</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Et quidem rerum</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">At vero eos et </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4 class="footer-heading">Contact</h4>
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="">Primum igitur</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Certe, inquam</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="">Quae fuerit causa</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
