add blocks from hometask 15

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                     <div class="flex-block-img">
                         <img src="img/swpool.jpg" alt="">
                         <img src="img/building.jpg" alt="">
-                    </div>
-                    
+                    </div>      
                 </div>
                 <div class="col-2">
                     <div  class="col-2-text-block">
@@ -87,6 +86,75 @@
             <p class="text">Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p>
             <a href="" class="btn">Contact Us</a>
             <a href="" class="btn play"><img src="img/play.svg">Watch now</a>
+        </div>
+    </section>
+    <section class="service-sec">
+        <div class="service-sec-textblock">
+            <h2 class="heading">Who do we serve?</h2>
+            <p class="text">Every buyer and seller of tech and services in the world.</p>
+        </div>
+        <div class="service-sec-flexbox container">
+            <div class="col-1">
+                <h2 class="heading">Buyers</h2>
+                <p class="text">Torquem detraxit hosti et quidem se texit, ne ad eam.</p>
+                <a href="" class="btn">Get Started</a>
+            </div>
+            <div class="col-2">
+                <h2 class="heading">Sellers</h2>
+                <p class="text">Torquem detraxit hosti et quidem se texit, ne ad eam.</p>
+                <a href="" class="btn">Get Started</a>
+            </div>
+        </div>
+    </section>
+    <section class="qualities-sect container">
+        <h2 class="qualities-sect-heading">Why choose us?</h2>
+        <div class="qualities-sect-flex-container">
+            <div class="col-1">
+                <p class="heading">Performance</p>
+                <p class="tex">Torquem detraxit hosti et quidem se texit, ne ad.</p>
+            </div>
+            <div class="col-2">
+                <p class="heading">Entrepreneurship</p>
+                <p class="tex">Torquem detraxit hosti et quidem se texit, ne ad.</p>
+            </div>
+            <div class="col-3">
+                <p class="heading">Authenticity</p>
+                <p class="tex">Torquem detraxit hosti et quidem se texit, ne ad.</p>
+            </div>
+            <div class="col-4">
+                <p class="heading">Kindness</p>
+                <p class="tex">Torquem detraxit hosti et quidem se texit, ne ad.</p>
+            </div>
+        </div>
+    </section>
+    <section class="testimonials-sec container">
+        <div class="text-block">
+            <h2 class="heading">Thanks for your nice words to us</h2>
+            <p class="text">Si sine causa, nollem me tamen laudandis maioribus meis corrupisti nec voluptas</p>
+        </div>
+        <div class="testimonials-sec-container">
+            <div class="item">
+                <img src="img/testimonial-1.jpg" alt="">
+                <p class="testimonials-text">"Omne animal, simul atque integre iudicante itaque earum motus et."</p>
+                <p class="author">Arend Pellewever</p>
+                <p class="city">Baltimore</p>
+                <a href=""><img src="img/play-btn.svg" class="play-btn"alt=""></a>
+            </div>
+            <div class="item">
+                <img src="img/testimonial-2.jpg" alt="">
+                <p class="testimonials-text">"In quo quaerimus, non emolumento aliquo, sed quia voluptas sit."</p>
+                <p class="author">Leo Knight</p>
+                <p class="city">Cleveland</p>
+                <a href=""><img src="img/play-btn.svg" class="play-btn"alt=""></a>
+            </div>
+            <div class="item">
+                <img src="img/testimonial-3.jpg" alt="">
+                <p class="testimonials-text">"Filium morte multavit si sine causa? quae fuerit causa, nollem."</p>
+                <p class="author">Lisanne Viscaal</p>
+                <p class="city">Lyon</p>
+                <a href=""><img src="img/play-btn.svg" class="play-btn"alt=""></a>
+                <img src="img/cut-circle.svg" class="cut-circle">
+            </div>
         </div>
     </section>
     <footer>
